objects/SVMX_PS_TS_Timesheet_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Settings to control the Timesheet Functionality</description>
    <label>Timesheet Settings</label>
    <fields>
        <fullName>SVMX_PS_TS_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_TS_Field_Type__c</fullName>
        <label>Field Type</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_TS_Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>